# AiDesktopCompanion

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml  release-windows.yml  semantic-pr.yml
.history/specs/: AiDesktopCompanion_20250821145851.md  Implementation_Plan_20250824215911.md  Implementation_Plan_20250824220525.md  Implementation_Plan_20250824223605.md  Implementation_Plan_20250824223610.md  Implementation_Plan_20250824223616.md  Implementation_Plan_20250824223623.md  Implementation_Plan_20250824223650.md  Implementation_Plan_20250824223655.md  Implementation_Plan_20250824223703.md  Implementation_Plan_20250824223728.md  Implementation_Plan_20250824223737.md  Implementation_Plan_20250824223748.md  Implementation_Plan_20250824223812.md  Implementation_Plan_20250824223850.md  Implementation_Plan_20250824223913.md  (+16 more)
app/: DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: capture.rs  chat.rs  command_hook.rs  config.rs  lib.rs  mcp.rs  quick_actions.rs  quick_prompts.rs  settings.rs  stt.rs  stt_parakeet.rs  stt_whisper.rs  tts.rs  tts_mod.rs  tts_openai.rs  tts_streaming_server.rs  tts_utils.rs  tts_win_native.rs  utils.rs
specs/: CommandMode_design.md  Implementation_Plan.md  Overview_AiDesktopCompanion.md  QuickActions_Popup_design_mockup.html  UI_Styles.md
temp/: STS_log1.txt
(+60 files in other folders)
