[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = ["protocol-asset"] }
tauri-plugin-log = "2.3.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-dialog = "2.3.0"
arboard = "3"
enigo = "0.1"
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation"
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
screenshots = "0.8"
image = "0.25"
chrono = "0.4"
once_cell = "1.19"
hound = "3"
